[package]
name = "interest-bearing-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "interest_bearing_vault"


[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["interface-instructions"] }
anchor-spl = "0.31.1"

# Library for easy management of 8-byte discriminators
spl-discriminator = "0.5.1"
# Library defining a generic state interface to encode additional required accounts for an instruction, using Type-Length-Value structures
spl-tlv-account-resolution = "0.11.1"
# Library with helper to resolve additional accounts
spl-transfer-hook-interface = "2.0.0"
# SPL Token-2022 program with onchain helpers for transfer hooks
spl-token-2022 = { version = "6.0", features = ["no-entrypoint"] }


[dev-dependencies]
transfer-hook = { path = "../transfer-hook", features = ["cpi"] }
litesvm = "0.7.1"
litesvm-token = "0.7.1"

anchor-spl = "0.31.1"

solana-instruction = "2.3.0"
solana-keypair = "2.2.3"
solana-native-token = "3.0.0"
solana-pubkey = "2.4.0"
solana-signer = "2.2.1"
solana-system-interface = "1.0.0"
solana-transaction = "2.2.1"
solana-message = "2.4.0"
solana-sdk-ids = "2.2.1"
solana-rpc-client = "3.0.3"
solana-address = "1.0.0"
solana-account = "2.2.1"

